# word2latex-agent

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml  requirements.txt  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md
input/: report.docx
prompts/: system_prompt.txt
src/word2latex_agent/: __init__.py  agent.py  citations.py  cli.py  config.py  docx_reader.py  latex_writer.py  models.py  overleaf_sync.py  qa_checker.py  template_manager.py
templates/: main.tex.j2
templates/agu/: README.md  main.tex.j2  metadata.yaml  preamble.tex.j2
templates/copernicus/: README.md  main.tex.j2  metadata.yaml  preamble.tex.j2
templates/generic_article/: README.md  metadata.yaml
templates/generic_report/: README.md  main.tex.j2  metadata.yaml  preamble.tex.j2
templates/nature/: README.md  main.tex.j2  metadata.yaml  preamble.tex.j2
templates/springer/: README.md  main.tex.j2  metadata.yaml  preamble.tex.j2
tests/: __init__.py  fixtures.py  test_agent.py  test_conversion.py
